syntax = "proto3";

package protodb.wasm;

import "google/protobuf/descriptor.proto";

message RegisterModuleRequest {
    string database = 1;
    string name = 2;

    message ModuleMetadata {
        string name = 1;

        message BindgenImportHashes {
            string log = 1;
            string find_object = 2;
            string find_objects_iter = 3;
            string find_objects_iter_next = 4;
        }
        BindgenImportHashes bindgen_import_hashes = 2;
    }
    ModuleMetadata metadata = 3;

    bytes wasm = 4;
    google.protobuf.DescriptorProto result_schema = 5;
}

message RegisterModuleResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        INVALID_DATABASE = 2;
        MODULE_EXISTS = 3;
    }
    ErrorCode error_code = 1;
}
