syntax = "proto3";

package protodb.collection;

import "google/protobuf/descriptor.proto";

message GetCollectionInfoRequest {
    string database = 1;
    string collection = 2;
}

message GetCollectionInfoResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        INVALID_DATABASE = 2;
        INVALID_COLLECTION = 3;
    }
    ErrorCode error_code = 1;

    google.protobuf.DescriptorProto schema = 2;
}
